src/test/ui/terminal-width/non-whitespace-trimming-2.stderr
error[E0308]: mismatched types
  --> $DIR/non-whitespace-trimming-2.rs:4:311
   |
LL | ... let _: usize = 14; let _: usize = 15; let _: () = 42; let _: usize = 0; let _: usize = 1; let _: usize = 2; let _: usize = 3; let _: ...
   |                                                       ^^ expected `()`, found integer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
